--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
 </div><!-- /.navigation-wrapper -->
 <header class="masthead">
 	<div class="wrap">
-		<a href="{{ site.url }}" class="site-logo" rel="home" title="{{ site.title }}"><img src="{{ site.url }}/assets/img/{{ site.logo }}" class="animated fadeInUp"></a>
+		<a href="{{ site.url }}" class="site-logo" rel="home" title="{{ site.title }}"><img src="{{ site.url }}/assets/img/{{ site.logo }}" class="animated fadeInUp" alt="{{ site.title }}"></a>
 		<h1 class="site-title animated fadeIn"><a href="{{ site.url }}">{{ site.title }}</a></h1>
 		<h2 class="site-description animated fadeIn">{{ site.description }}</h2>
 	</div>
